<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/q"
        android:textColor="@color/white"
        android:textSize="200sp"
        app:layout_constraintBottom_toTopOf="@+id/login_card"
        app:layout_constraintDimensionRatio="2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/cardback_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/allerta"
                android:text="@string/sign_in"
                android:textColor="@color/textcolor"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Phonenum"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_your_phone_number"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="#E4E4E4"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="#FCC8C8"
                app:hintTextColor="@color/black"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="#E4E4E4"
                android:backgroundTint="@color/themecolor"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="#FCC8C8"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Phonenum">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:textSize="17dp"
                android:text="@string/forgot_password"
                android:textColor="@color/themecolor"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/textcolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotpassword"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/social_round"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/google"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="100dp"
                        android:layout_marginLeft="100dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/google"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/facebook"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                        app:layout_constraintVertical_bias="0.7" />

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="100dp"
                        android:layout_marginRight="100dp"
                        android:src="@drawable/facebook"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/google"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.7" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/Signin_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:scaleType="fitCenter"
        android:padding="15dp"
        android:background="@drawable/button_shape"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/black"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>